    - Activity Feed now shows board name and link
    - No mandatory due date
  * Comments can now have Textile markup
  * Comments now show author's name instead of email
  * Display note and evidence titles in breadcrumbs
  * Editor improvements:
    - New form-view to edit each field individually
    - Formatting toolbar to help with markup
    - Side-by-side editor preview that auto-updates
  * Link to Methodology from project summary chart
  * Navigation sidebar in projects can be kept open while navigating across views
  * Refactored dots-menu to make it available in any view
  * Remove tag color from issue titles in issue summary
  * Use shared noscript partial
  * Use user model reference for activities instead of user email
  * Upgraded gems: puma, sass-rails
  * Bugs fixed:
    - Fix textile preview not showing on issues with very long text
    - Long project names interfering with search bar expansion
    - Report 'Download' button becoming a disabled 'Processing...' button once clicked
    - SemVer pre-release appending character
    - Set :author when creating Evidence from an Issue
    - Sidebar items not showing active state
    - Stop bin/setup from creating folders outside dradis-ce/
    - bin/setup will not error if the attachments directory already exists
    - Bug tracker items: #560
  * New integrations:
    - [new integration #1]
  * Integration enhancements:
    - Nexpose: better cipher wrapping coverage
    - Nikto: support new nested <niktoscan> format
  * Reporting enhancements:
    - HTML reports now use main app's markup rendering
  * REST/JSON API enhancements:
    - [API enhancement #1]
  * Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v3.16 (February 2020)