@@ -33,7 +33,7 @@
 //= require tylium/engines
 //= require tylium/keyboard_shortcuts
 
-//= require tylium/modules/auto_save
+//= require tylium/modules/local_auto_save
 
 //= require tylium/modules/comments
 //= require tylium/modules/configurations
