@@ -3,3 +3,4 @@
 //= require tylium/modules/issues/merge
 //= require tylium/modules/issues/table
 //= require tylium/modules/issues/tag-input
+//= require tylium/modules/issues/local_tag_auto_save
