@@ -1,4 +1,11 @@
-<%= simple_form_for [current_project, @board, @list, @card] do |f| %>
+<%= simple_form_for [current_project, @board, @list, @card],
+  html: {
+    data: {
+      behavior: ('local-auto-save' if @card.new_record?),
+      auto_save_key: ("#{@list.id}-card#{"-#{params[:template]}" if params[:template]}" if @card.new_record?)
+    }
+  } do |f| %>
+
   <%= f.error_notification %>
 
   <%= f.input :name, required: false %>
@@ -17,7 +24,7 @@
         rows: 20
       }
   %>
-  
+
   <%=
     f.association(
       :assignees,
@@ -34,10 +41,17 @@
 
   <div class="form-actions">
     <%= f.button :submit, nil, class: 'btn btn-primary' %> or
-    <%=
-      link_to 'Cancel',
-        @card.persisted? ? [current_project, @board, @list, @card] : [current_project, @board],
-        class: 'cancel-link'
-    %>
+    <% if @card.persisted? %>
+      <%= link_to 'Cancel', [current_project, @board, @list, @card], class: 'cancel-link' %>
+    <% else %>
+      <%=
+        link_to 'Cancel',
+        [current_project, @board],
+        class: 'cancel-link',
+        data: {
+          behavior: 'clear-local-auto-save'
+        }
+      %>
+    <% end %>
   </div>
 <% end %>
