@@ -1,4 +1,11 @@
-<%= simple_form_for [current_project, @node, @evidence] do |f| %>
+<%= simple_form_for [current_project, @node, @evidence],
+  html: {
+    data: {
+      behavior: ('local-auto-save' if @evidence.new_record?),
+      auto_save_key: ("project-#{current_project.id}-node-#{@node.id}-evidence#{"-#{params[:template]}" if params[:template]}" if @evidence.new_record?)
+    }
+  } do |f| %>
+
   <%= f.error_notification %>
 
   <div class="form-inputs">
@@ -10,7 +17,7 @@
         data: textile_default_data.merge(
           allow_dropdown: @evidence.new_record?,
           autosave_key: "#{current_project.id}-evidence-#{ @evidence.persisted? ? "edit-#{@evidence.id}" : "new-for-#{@node.id}" }",
-          behavior: 'auto-save rich-toolbar',
+          behavior: 'rich-toolbar',
           'rich-toolbar': 'block-code bold field italic link list-ol list-ul table'
         ),
         rows: 20
@@ -25,6 +32,12 @@
   <div class="form-actions">
     <%= hidden_field_tag :back_to, :issue if params[:back_to] == 'issue' %>
     <%= f.button :submit, nil, class: 'btn btn-primary' %> or
-    <%= link_to 'Cancel', project_node_path(@node.project, @node) %>
+    <%=
+      link_to 'Cancel',
+      project_node_path(@node.project, @node),
+      data: {
+        behavior: ('clear-local-auto-save' if @evidence.new_record?)
+      }
+    %>
   </div>
 <% end %>
