@@ -12,6 +12,8 @@ v3.17 (Month 2020)
     - New form-view to edit each field individually
     - Formatting toolbar to help with markup
     - Side-by-side editor preview that auto-updates
+  * Improve current implementation of persisting data when creating new Card, Evidence, Issue, and Note
+    - Data now persists on unsaved changes when using a template
   * Link to Methodology from project summary chart
   * Navigation sidebar in projects can be kept open while navigating across views
   * Refactored dots-menu to make it available in any view
